--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "@calderajs/forms": "^0.6.1",
     "classnames": "^2.2.6",
-    "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-test-renderer": "^16.7.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-spinners": "^0.5.4",
+    "react-test-renderer": "^16.8.6",
     "react-wp-scripts": "0.2.0"
   },
   "scripts": {
