--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@calderajs/forms": "^0.6.1",
+    "@calderajs/components": "^0.6.4",
+    "@calderajs/forms": "^0.6.4",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
