finish sign up block, roughly spekaing

--- a/package.json
+++ b/package.json
@@ -10,25 +10,26 @@
   },
   "dependencies": {
     "@babel/preset-env": "^7.3.1",
-    "@calderajs/forms": "^0.7.1",
+    "@calderajs/forms": "^0.7.2",
     "@wordpress/block-editor": "^2.0.1",
     "@wordpress/components": "^7.0.7",
+    "@wordpress/compose": "^3.2.0",
     "@wordpress/editor": "^9.0.9",
     "@wordpress/element": "^2.1.9",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-spinners": "^0.5.4"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0",
+    "@babel/core": "7.4.4",
     "@babel/plugin-proposal-async-generator-functions": "^7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
-    "@storybook/react": "^4.1.11",
-    "@wordpress/babel-preset-default": "^3.0.1",
+    "@storybook/react": "^5.0.11",
+    "@wordpress/babel-preset-default": "^4.1.0",
     "add": "^2.0.6",
     "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
@@ -38,7 +39,7 @@
     "enzyme-adapter-react-16": "^1.8.0",
     "glob-loader": "^0.3.0",
     "jest": "^24.0.0",
-    "react-test-renderer": "^16.8.6",
+    "react-test-renderer": "^16.8.4",
     "signal-exit": "^3.0.2",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
