--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@calderajs/forms": "^0.7.2",
     "@wordpress/block-editor": "^2.0.1",
