--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "repositories": [
         {
             "type": "path",
-            "url": "../../packages/mailchimp-functions"
+            "url": "./packages/mailchimp-functions"
         }
     ],
     "require-dev": {
