--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@wordpress/dom-ready": "^2.2.0",
     "@wordpress/editor": "^9.0.9",
     "@wordpress/element": "^2.1.9",
+    "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
