--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
-    "@calderajs/forms": "^0.8.2",
+    "@calderajs/forms": "^0.8.4",
     "@wordpress/block-editor": "^2.0.1",
     "@wordpress/components": "^7.0.7",
     "@wordpress/compose": "^3.2.0",
@@ -20,10 +20,12 @@
     "@wordpress/element": "^2.1.9",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "is-email-valid": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-spinners": "^0.5.4"
+    "react-spinners": "^0.5.4",
+    "yup": "^0.26.10"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
