--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest --watch",
     "test:ci": "jest -ci",
     "zip": "node zip.js",
-    "client:create": "webpack --config=.config/webpack.config.client.js"
+    "client:create": "webpack --config=.config/webpack.config.client.js",
+    "prepack" : "yarn build && yarn client:create"
   },
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
@@ -82,5 +83,10 @@
       "!**/vendor/**"
     ]
   },
-  "proxy": "https://formcalderas.lndo.site/"
+  "files": [
+    "client.js",
+    "build/front.js",
+    "build/editor.js",
+    "README.md"
+  ]
 }
