--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@calderajs/caldera-mailchimp",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.2.2",
   "scripts": {
     "build": "webpack --config=.config/webpack.config.prod.js",
     "start": "webpack-dev-server --config .config/webpack.config.dev.js",
@@ -10,7 +9,7 @@
     "test:ci": "jest -ci",
     "zip": "node zip.js",
     "client:create": "webpack --config=.config/webpack.config.client.js",
-    "prepack" : "yarn build && yarn client:create"
+    "prepack": "yarn build && yarn client:create"
   },
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
@@ -88,5 +87,14 @@
     "build/front.js",
     "build/editor.js",
     "README.md"
-  ]
+  ],
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "publishConfig": {
+    "access": "public"
+  }
 }
