--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-	"presets": [ "@wordpress/babel-preset-default" ],
-	"plugins": [
-		"@babel/plugin-syntax-dynamic-import",
-		[ "transform-react-jsx", {
-			"pragma": "wp.element.createElement"
-		} ]
-	]
+	"presets": [ "@babel/react" ]
+
 }
