move forms to @calderajs/forms

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@babel/cli": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
-    "@calderajs/forms": "^0.8.4",
+    "@calderajs/forms": "^0.9.2",
     "@wordpress/block-editor": "^2.0.1",
     "@wordpress/components": "^7.0.7",
     "@wordpress/compose": "^3.2.0",
@@ -76,7 +76,7 @@
     "setupFiles": [
       "<rootDir>/.config/jest/test-setup.js"
     ],
-    "collectCoverage": true,
+    "collectCoverage": false,
     "collectCoverageFrom": [
       "../src/**/*.{js,jsx}",
       "!**/node_modules/**",
