--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@calderajs/caldera-mailchimp",
   "version": "0.5.1",
   "scripts": {
-    "build": "webpack --config=.config/webpack.config.prod.js",
+    "build": "yarn build:blocks && yarn build:client",
+    "build:blocks": "webpack --config=.config/webpack.config.prod.js",
     "start": "webpack-dev-server --config .config/webpack.config.dev.js",
     "storybook": "start-storybook -p 9001 -c .storybook",
     "test": "jest --watch",
@@ -15,7 +16,7 @@
     "@babel/cli": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
-    "@calderajs/forms": "^0.9.2",
+    "@calderajs/forms": "^0.9.3",
     "@wordpress/block-editor": "^2.0.1",
     "@wordpress/components": "^7.0.7",
     "@wordpress/compose": "^3.2.0",
